...
                .constrainAs(createTodoButton) {
                    bottom.linkTo(parent.bottom)
                    end.linkTo(parent.end)
                }
                .padding(24.dp)
        ) {
            Icon(Icons.Rounded.Add, contentDescription = "Add")
        }

        error?.let {
            it.fold(
                onSuccess = {
                    onTodoUpdateSucceed()
...
