...
            ) {
                Text("Delete")
            }
            Checkbox(
                checked = repeat,
                onCheckedChange = { repeat = it },
                modifier = Modifier.semantics { contentDescription = "repeat_checkbox" },
            )
            Text(
                text = "Repeat",
                modifier = Modifier
                    .align(Alignment.CenterVertically),
            )
...
