...
            ) {
                FloatingActionButton(
                    onClick = {
                        if (!isLottering) viewModel.startLottery()
                    },
                    shape = RoundedCornerShape(8.dp),
                    modifier = Modifier.semantics { contentDescription = "single_lottery_button" },
                ) {
                    if (isSingleLottering) {
                        CircularProgressIndicator(
                            modifier = Modifier.size(24.dp),
                            color = MaterialTheme.colorScheme.onPrimaryContainer,
                            strokeWidth = 2.dp,
...
                }
            },
            modifier = Modifier
                .align(Alignment.BottomEnd)
                .padding(24.dp),
        ) {
            Icon(Icons.Filled.Add, contentDescription = "Add")
        }
    }

    val resultErrorMessage = result?.exceptionOrNull()
        ?.let { stringResource(id = ErrorMessageClassifier(it).messageId) }
    LaunchedEffect(result) {
...
